--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     },
     "require": {
         "php": "^7.2",
-        "boxalino/rtux-shopware": "0.0.1"
+        "boxalino/rtux-shopware": "dev-master",
+        "boxalino/rtux-api-php": "dev-master"
     },
     "autoload": {
         "psr-4": {
