--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "boxalino/rtux-integration-shopware",
     "type": "shopware-platform-plugin",
     "description": "Boxalino Real Time User Experience (RTUX) Integration",
-    "license": "proprietary",
+    "license": "MIT",
     "authors": [
         {
             "name": "Boxalino AG",
@@ -24,8 +24,8 @@
     },
     "require": {
         "php": "^7.2",
-        "boxalino/rtux-shopware": "dev-master",
-        "boxalino/rtux-api-php": "dev-master"
+        "boxalino/rtux-shopware": ">=1.0.0",
+        "boxalino/rtux-api-php": ">=1.0.0"
     },
     "autoload": {
         "psr-4": {
