--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
     "require": {
         "php": "^7.2",
         "boxalino/exporter-shopware6": "~1.2.0",
-        "boxalino/rtux-shopware": "^2.2",
-        "boxalino/rtux-api-php": "~2.6.0"
+        "boxalino/rtux-shopware": "~2.4.0",
+        "boxalino/rtux-api-php": "~2.8.3"
     },
     "autoload": {
         "psr-4": {
