--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "php": "^7.2",
         "boxalino/exporter-shopware6": "~1.2.0",
         "boxalino/rtux-shopware": "~2.4.0",
-        "boxalino/rtux-api-php": "~2.8.3"
+        "boxalino/rtux-api-php": "~2.8.3",
+        "boxalino/data-integration-shopware6": "~1.0.0"
     },
     "autoload": {
         "psr-4": {
