[DI] remove of data exporter; new structure is only valid with DI repo

--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,9 @@
     },
     "require": {
         "php": "^7.2",
-        "boxalino/exporter-shopware6": "~1.3.0",
         "boxalino/rtux-shopware": "~2.5.0",
         "boxalino/rtux-api-php": "~2.8.4",
-        "boxalino/data-integration-shopware6": "^2.1.0"
+        "boxalino/data-integration-shopware6": "~3.0.0"
     },
     "autoload": {
         "psr-4": {
