--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
         }
     },
     "require": {
-        "php": "^7.2",
-        "boxalino/rtux-shopware": "~3.4.4",
-        "boxalino/rtux-api-php": "~3.3.20",
+        "php": "^7.2 || ~8.1",
+        "boxalino/rtux-shopware": "~3.4.8",
+        "boxalino/rtux-api-php": "~3.3.33",
         "boxalino/data-integration-shopware6": "~3.4.0"
     },
     "autoload": {
