--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
     },
     "require": {
         "php": "^7.2 || ~8.1",
-        "boxalino/rtux-shopware": "~3.4.8",
+        "boxalino/rtux-shopware": "~3.4.8 || ~3.5.0",
         "boxalino/rtux-api-php": "~3.3.33",
-        "boxalino/data-integration-shopware6": "~3.4.0"
+        "boxalino/data-integration-shopware6": "~3.5.0"
     },
     "autoload": {
         "psr-4": {
